SignIn and SignUp structs changings
