# internal/models/signIn.go
@@ -1,18 +1,11 @@
 package models
 
 type SignInReq struct {
-	ClientID   string `json:"client_id"`
-	FirstName  string `json:"first_name"`
-	LastName   string `json:"last_name"`
-	Email      string `json:"email"`
-	DeviceNum  string `json:"device_num"`
-	DeviceType string `json:"device_type"`
-	Active     bool   `json:"-"`
+	ClientID string `json:"client_id"`
+	Email string `json:"email"`
+	AccessToken string `json:"access_token"`
 }
 
 type SignInRes struct {
-	AccessToken  string `json:"access_token"`
-	RefreshToken string `json:"refresh_token"`
-	Active       bool   `json:"active"`
-	ClientID     string `json:"client_id"`
+	
 }
