# internal/models/signUp.go
@@ -1,9 +1,18 @@
 package models
 
 type SignUpReq struct {
-	
+	ClientID   string `json:"client_id"`
+	FirstName  string `json:"first_name"`
+	LastName   string `json:"last_name"`
+	Email      string `json:"email"`
+	DeviceNum  string `json:"device_num"`
+	DeviceType string `json:"device_type"`
+	Active     bool   `json:"-"`
 }
 
 type SignUpRes struct {
-	Result bool `json:"result"`
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+	Active       bool   `json:"active"`
+	ClientID     string `json:"client_id"`
 }
