# internal/models/token.go
@@ -13,5 +13,5 @@ type GetTokenReq struct {
 }
 
 type GetTokenRes struct {
-	SignInRes
+	SignUpRes
 }
